# snowflake_scraper

./: .gitignore  LICENSE  pyproject.toml  readme.md  requirements.txt
.cursor/skills/analyze-rbac-audit/: SKILL.md  examples.md
.cursor/skills/review-revoke-recommendations/: SKILL.md
.cursor/skills/run-snowflake-rbac-audit/: SKILL.md  reference.md
.cursor/skills/tune-rbac-heuristics/: SKILL.md
examples/: sample-audit.json
prompts/: least-privilege-advisor.md
scripts/: preflight.sh  summarize_audit.py
snowflake_rbac_auditor/: __init__.py  __main__.py  analyzer.py  cli.py  connector.py  extractor.py  model.py  pipeline.py  reporter.py
tests/: test_analyzer.py  test_from_json.py
